test/TestSuite/Syntax/Errors/include_before_project.tjp
# MARK: error 2 include_before_project
include "foo.tji"
